# docs/swagger.json
@@ -25,7 +25,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.NodeCreateRequest"
+                            "$ref": "#/definitions/dto.RegisterRequest"
                         }
                     }
                 ],
@@ -34,12 +34,12 @@
         }
     },
     "definitions": {
-        "dto.NodeCreateRequest": {
+        "dto.RegisterRequest": {
             "type": "object",
             "properties": {
                 "confirm_password": {
                     "type": "string",
-                    "example": "123456"
+                    "example": "123456@mmMM.$"
                 },
                 "email": {
                     "type": "string",
@@ -47,7 +47,7 @@
                 },
                 "password": {
                     "type": "string",
-                    "example": "123456"
+                    "example": "123456@mmMM.$"
                 },
                 "phone_number": {
                     "type": "string",
@@ -55,7 +55,7 @@
                 },
                 "referral": {
                     "type": "string",
-                    "example": "L100@2154"
+                    "example": "L100@1245"
                 },
                 "username": {
                     "type": "string",
